bb-consent-privacy-dashboard/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: consentbb-privacy-dashboard
  name: consentbb-privacy-dashboard
  namespace: consentbb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consentbb-privacy-dashboard
  template:
    metadata:
      labels:
        app: consentbb-privacy-dashboard
    spec:
      containers:
        - image: eu.gcr.io/jenkins-189019/bb-consent-dashboard:main-20230825000504-6ea8fb5
          imagePullPolicy: IfNotPresent
          name: consentbb-privacy-dashboard
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 5000
              protocol: TCP
          resources: {}
