bb-consent-privacy-dashboard/svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consentbb-privacy-dashboard
  name: consentbb-privacy-dashboard-svc
  namespace: consentbb
spec:
  ports:
    - name: http
      port: 80
      targetPort: 80
  selector:
    app: consentbb-privacy-dashboard
